--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -14,13 +15,22 @@
         <div class="container">
             <div class="header__top-flex">
                 <img src="images/LOGO.png" alt="logotype" class="logo">
-                <ul class="nav">
-                    <li class="nav-link">Home</li>
-                    <li class="nav-link">Works</li>
-                    <li class="nav-link">Services</li>
-                    <li class="nav-link">About</li>
-                    <li class="nav-link">Contact</li>
-                </ul>
+                <div class="d-none d-md-block">
+                    <ul class="nav">
+                        <li class="nav-link">Home</li>
+                        <li class="nav-link">Works</li>
+                        <li class="nav-link">Services</li>
+                        <li class="nav-link">About</li>
+                        <li class="nav-link">Contact</li>
+                    </ul>
+                </div>
+                <div class="d-md-none">
+                    <div class="burger-menu">
+                        <div class="burger-line burger-line-1"></div>
+                        <div class="burger-line burger-line-2"></div>
+                        <div class="burger-line burger-line-3"></div>
+                    </div>
+                </div>
             </div>
             <div class="header__bottom-flex">
                 <div class="header-content">
@@ -31,5 +41,6 @@
             </div>
         </div>
     </header>
+    <script  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </body>
 </html>
