adaptive-second-section

--- a/index.html
+++ b/index.html
@@ -41,6 +41,75 @@
             </div>
         </div>
     </header>
+    <section class="section">
+        <div class="container">
+            <div class="section__flex-cards">
+                <div class="flex-card">
+                    <div class="flex-item">
+                        <img src="images/section-icon1.svg" alt="icon1" class="card-icon">
+                        <h4 class="card-title">UI/UX Design</h4>
+                        <p class="card-text">Our design is translated into comprehensive digital environments built on latest development standards.</p>
+                    </div>
+                </div>
+                <div class="flex-card">
+                    <div class="flex-item">
+                        <img src="images/section-icon2.svg" alt="icon1" class="card-icon">
+                        <h4 class="card-title">Development</h4>
+                        <p class="card-text">Our design is translated into comprehensive digital environments built on latest development standards.</p>
+                    </div>
+                </div>
+                <div class="flex-card">
+                    <div class="flex-item">
+                        <img src="images/section-icon3.svg" alt="icon1" class="card-icon">
+                        <h4 class="card-title">software testing</h4>
+                        <p class="card-text">Our design is translated into comprehensive digital environments built on latest development standards.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="porfolio">
+        <div class="container">
+            <div class="porfolio__content">
+                <h3 class="porfolio-h3">Portfolio</h3>
+                <div class="porfolio__block-1">
+                    <img src="images/porfolio-image1.jpg" alt="porfolio-1" class="block-img">
+                </div>
+                <h5 class="porfolio-h5 style-porf-1">Online fashion store - Homepage</h5>
+                <div class="porfolio__block-2">
+                    <img src="images/porfolio-image2.jpg" alt="porfolio-1" class="block-img">
+                </div>
+                <h5 class="porfolio-h5 style-porf-2">Reebok Store - Concept</h5>
+                <div class="porfolio__block-3">
+                    <img src="images/porfolio-image3.jpg" alt="porfolio-1" class="block-img">
+                </div>
+                <h5 class="porfolio-h5 style-porf-2">Braun Landing Page - Concept</h5>
+
+            </div>
+        </div>
+    </section>
+    <section class="contacts">
+        <div class="container">
+            <div class="contacts__content">
+                <div class="contacts__top">
+                    <h3 class="contacts-h3">Contacts</h3>
+                    <p class="contacts-p">Want to know more or just chat? <br> You are welcome!</p>
+                    <div class="contacts__button">
+                        <button type="button" class="btn btn-dark contacts-btn">Send message</button>
+                    </div>
+                </div>
+                <div class="contacts__middle">
+                    <img src="images/LinkedIn.svg" alt="icon1" class="icon">
+                    <img src="images/Instargam.svg" alt="icon2" class="icon">
+                    <img src="images/Behance.svg" alt="icon3" class="icon">
+                    <img src="images/Dribble.svg" alt="icon4" class="icon">
+                </div>
+                <div class="contacts__bottom">
+                    <p class="bottom-p">Like me on <br> LinkedIn, Instagram, Behance, Dribble</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="scripts/bootstrap.min.js"></script>
 </body>
 </html>
